# wallitor

./: LICENSE  README.md
wallitor-core/: README.md  conFig.cpp  conFig.h  dllmain.cpp  playerInstance.cpp  playerInstance.h  wallitor-core.sln  wallitor-core.vcxproj  wallitor-core.vcxproj.filters
wallitor-gui/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vite.config.ts.timestamp-1728907575500-ace9aca6c3bef.mjs
wallitor-gui/src/: App.vue  main.ts
wallitor-gui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
wallitor-gui/src-tauri/capabilities/: default.json  migrated.json  video.json
wallitor-gui/src-tauri/icons/: icon.icns
wallitor-gui/src-tauri/resource/0213921/: config.json
wallitor-gui/src-tauri/src/: lib.rs  main.rs  reader.rs  setup.rs
wallitor-gui/src-tauri/src/handler/: apply.rs  file.rs  mod.rs  wallpaper.rs
wallitor-gui/src/components/: AddItem.vue  ApplyBar.vue  CDialog.vue  CRMenu.vue  CRMenuCell.vue  EditItem.vue  ItemCard.vue  SvgIcon.vue  TitleBar.vue
wallitor-gui/src/store/: index.ts  vuex.d.ts
wallitor-gui/src/style/: cui.css  entry.css  global.css
wallitor-gui/src/ts/: entry.ts  types.d.ts
wallitor-gui/src/views/: AboutView.vue  HomeView.vue  SettingsView.vue
wallitor-gui/video/: index.html  playback.ts
